--- a/Corona-Warn-App/src/main/res/values-fr/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-fr/strings.xml
@@ -371,7 +371,7 @@
   <string name="information_legal_subtitle_publisher"></string>
   <string name="information_legal_body_publisher">Sciensano<xliff:g id="line_break">\n</xliff:g>14 rue Juliette Wytsman<xliff:g id="line_break">\n</xliff:g>1050 Bruxelles</string>
   <string name="information_legal_headline_contact">Contact</string>
-  <string name="information_legal_subtitle_contact">E-Mail: info@sciensano.be<xliff:g id="line_break">\n</xliff:g>Telephone: 0800 14 689</string>
+  <string name="information_legal_subtitle_contact">E-Mail: coronalert@sciensano.be<xliff:g id="line_break">\n</xliff:g>Telephone: 0800 14 689</string>
   <string name="information_legal_headline_taxid">Numéro d\'identification à la TVA</string>
   <string name="information_legal_subtitle_taxid">BE 234 123 678</string>
   <string name="information_legal_illustration_description">Une main tient un smartphone qui affiche un texte à l\'écran. À côté du texte se trouve un symbole de section représentant la marque.</string>
