--- a/Corona-Warn-App/src/main/res/values-fr/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-fr/strings.xml
@@ -609,8 +609,8 @@
     <string name="preference_dummy_test_requests_to_send">preference_dummy_test_requests_to_send</string>
     <string name="preference_negative_test_result">preference_negative_test_result</string>
     <string name="test_api_switch_background_notifications">Background notification</string>
-    <string name="risk_details_behavior_body_contact_no_symptom">Vous n\'avez pas de symptômes ? Si tel est le cas, veuillez prendre contact avec :</string>
-    <string name="risk_details_behavior_increased_body_1_no_symptom">- Le centre de contact au 02 214.19.19</string>
+    <string name="risk_details_behavior_body_contact_no_symptom">Vous n\'avez pas de symptômes ?</string>
+    <string name="risk_details_behavior_increased_body_1_no_symptom">- Respectez une quarantaine de 10 jours.</string>
     <string name="risk_details_behavior_get_tested">Faites-vous tester dès que possible.</string>
     <string name="statistics_healine">Moyenne hebdomadaire</string>
     <string name="statistics_date_range" formatted="false">%s - %s</string>
@@ -629,7 +629,6 @@
     <string name="test_linked_dialog_title">Test lié avec succès</string>
     <string name="test_linked_dialog_body">Votre test a été lié avec succès à votre smartphone. Désormais, vous pourrez recevoir votre résultat de test dans Coronalert.</string>
     <string name="test_linked_dialog_button_positive">OK</string>
-
     <string name="submission_done_reset_dialog_title">Réinitialisation de l\'app</string>
     <string name="submission_done_reset_dialog_body">Merci de partager vos données et d\'aider les autres. L\'application va maintenant être réinitialisée et toutes les données seront supprimées. Nous vous recommandons vivement de désactiver l\'application pendant votre période d\'isolement en arrêtant l\'enregistrement de l\'exposition. Après votre période d\'isolement, vous pourrez à nouveau utiliser l\'application.</string>
     <string name="submission_done_reset_dialog_button_positive">OK</string>
